--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -60,29 +60,52 @@
                 Dashboard
             </h1>
             <div class="statics">
-                <div class="sales">
-                    <i class="fa-solid fa-coins"></i>
-                    <p class="title">
-                        my score
-                        <br>
-                        <span class="num"> <span>0</span>
-                    </p>
+                <div class="box sales-box">
+                    <div class="sales">
+                        <span class="info-btn" onclick="flipCard()"><i class="fa-solid fa-circle-exclamation"></i>
+                            info</span>
+                        <div class="content-sales">
+                            <i class="fa-solid fa-coins"></i>
+                            <p class="title">
+                                my score
+                                <br>
+                                <span class="num"> <span>0</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <i class="fa-solid fa-coins"></i>
+                        <span class="text">
+                            <p class="title">what is this score ?</p>
+                            <P class="text-exp">Every time you make an order or reservation, you earn points. These
+                                points
+                                can be redeemed for place new orders
+                                . It's our way of thanking you for being part of our community and rewarding your
+                                loyalty. Start earning points and enjoy the benefits!</P>
+                            <span class="info-btn" onclick="flipCard()"><i class="fa-solid fa-circle-exclamation"></i>
+                                back</span>
+                        </span>
+                    </div>
                 </div>
-                <div class="total-orders">
-                    <i class="fa-solid fa-cart-shopping"></i>
-                    <p class="title">
-                        total orders
-                        <br>
-                        <span class="num"><span>0</span></span>
-                    </p>
+                <div class="box">
+                    <div class="total-orders">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                        <p class="title">
+                            total orders
+                            <br>
+                            <span class="num"><span>0</span></span>
+                        </p>
+                    </div>
                 </div>
-                <div class="total-resrvation">
-                    <i class="fa-solid fa-users"></i>
-                    <p class="title">
-                        total Reservation
-                        <br>
-                        <span class="num"><span>0</span></span>
-                    </p>
+                <div class="box">
+                    <div class="total-resrvation">
+                        <i class="fa-solid fa-users"></i>
+                        <p class="title">
+                            total Reservation
+                            <br>
+                            <span class="num"><span>0</span></span>
+                        </p>
+                    </div>
                 </div>
             </div>
 
