--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -73,7 +73,7 @@
                 </div>
                 <div class="password-container part">
 
-                    <label for="old-password">old password </label>
+                    <label for="old-password">old password : </label>
                     <input type="password" class="old-password" name="old-password">
                 </div>
                 <div class="password-container part">
@@ -82,14 +82,13 @@
                 </div>
 
                 <div class="part btns">
-                    <input type="button" value="delete account" class="delete-btn">
                     <input type="button" value="edit" class="edit-btn">
                     <input type="button" value="Save" class="save-btn" onclick="updateData()" />
                     <input type="button" value="cancel" class="cancel-btn">
+                    <input type="button" class="change-pass-btn" value="change password">
+                    <input type="button" value="delete account" class="delete-btn">
                 </div>
-                <div class="change-password part ">
-                    <span class="change-pass-btn">change your password</span>
-                </div>
+
             </form>
         </div>
     </div>
@@ -97,8 +96,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-profile.js"></script>
-    <script src="/js/loading.js"></script>s
-    <script src="/js/update-name.js"></script>s
+    <script src="/js/loading.js"></script>
+    <script src="/js/update-name.js"></script>
 </body>
 
 </html>
