--- a/css/admin-profile.css
+++ b/css/admin-profile.css
@@ -259,80 +259,54 @@ form.user-info {
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
+  margin-left: 20px;
 }
-form.user-info .change-password {
+form .part {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  pointer-events: painted !important;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 100%;
+  height: 60px;
+  font-size: 25px;
 }
-.change-password .change-pass-btn {
-  border: 1px solid black;
-  padding: 10px 20px;
-  font-size: 18px;
+.output .part label {
+  font-size: 20px;
+  font-weight: 600;
+  font-family: var(--statics-font);
+  width: 200px;
+}
+.output .part input {
+  min-width: 330px;
+  width: 330px;
+  font-size: 20px;
+  padding: 5px 8px;
+  margin-left: 5px;
+  text-transform: capitalize;
+  background-color: transparent;
   border-radius: var(--border-radius-3);
+  /* box-shadow: var(--box-shadow); */
   -webkit-border-radius: var(--border-radius-3);
   -moz-border-radius: var(--border-radius-3);
   -ms-border-radius: var(--border-radius-3);
   -o-border-radius: var(--border-radius-3);
-  transition: 0.3s;
-  box-shadow: var(--box-shadow);
-  cursor: pointer;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -ms-transition: 0.3s;
-  -o-transition: 0.3s;
-  pointer-events: painted;
 }
-.change-password .change-pass-btn:hover {
-  background-color: var(--color-dark);
-  color: var(--color-white);
-}
-
-.password-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  display: none;
-  transition: 0.3s;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -ms-transition: 0.3s;
-  -o-transition: 0.3s;
-}
-.change {
-  display: block;
-}
-.change input {
-  border: 1px solid black;
-  pointer-events: painted;
-  width: 50%;
-}
-span.change {
-  display: none;
-}
-
-.output .part {
-  width: 100%;
-  height: 60px;
-  font-size: 30px;
-}
-.output .part input {
-  font-size: 30px;
-  background-color: transparent;
+.output .part .email {
+  text-transform: none;
 }
 .output .btns {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  width: 90%;
+  width: 100%;
   gap: 10px;
 }
 .output .btns input {
   pointer-events: painted;
   cursor: pointer;
+  width: fit-content !important;
   border: 1px solid black;
   padding: 10px 20px;
   border-radius: var(--border-radius-3);
@@ -348,41 +322,54 @@ span.change {
   -o-transition: 0.3s;
   font-size: 20px;
   text-transform: capitalize;
+  box-shadow: var(--box-shadow);
 }
 .output .btns input:hover {
   background-color: var(--color-dark);
   color: var(--color-white);
-}
-.output .btns .save-btn,
-.output .btns .cancel-btn {
-  display: none;
+  box-shadow: none;
 }
 .output .btns .delete-btn {
   background-color: rgba(255, 0, 0, 0.921);
   border: none;
   color: var(--color-white);
 }
-@media (max-width: 600px) {
-  .output {
-    min-width: 340px;
-  }
-  .output .part,
-  .output .part input,
-  .output .btns input {
-    font-size: 18px;
-  }
+.output .btns .save-btn {
+  background-color: rgba(255, 68, 0, 0.8);
+  border: none;
+  color: var(--color-white);
+}
+.output .password-container {
+  display: none;
+}
+.output .btns .save-btn,
+.output .btns .cancel-btn,
+.change-pass-btn {
+  display: none;
 }
 .on-edit .part input {
   border: 1px solid;
   pointer-events: painted;
 }
+.on-edit .part .change-pass-btn {
+  display: block;
+}
 .on-edit .btns .delete-btn,
 .on-edit .btns .edit-btn {
-  display: none;
+  display: none !important;
 }
 .on-edit .btns .save-btn,
 .on-edit .btns .cancel-btn {
   display: block;
 }
+.change {
+  display: flex !important;
+}
+.change input {
+  border: 1px solid black;
+  pointer-events: painted;
+}
 
-/* end dashboard container section */
+.change.change-pass-btn {
+  display: none !important;
+}
