--- a/views/home.ejs
+++ b/views/home.ejs
@@ -72,9 +72,11 @@
     <div class="info-container">
       <div class="info-text">
         <h3>the health food for wealthy mood</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia numquam quaerat quisquam consequatur,
-          assumenda non fuga aspernatur ipsa nulla eos quos amet tempore corrupti, accusamus nostrum quis est soluta
-          voluptatem!</p>
+        <p>Welcome to YKPO Café , your cozy retreat in the heart of Jenin. Enjoy our artisanal drinks, paired
+          perfectly with homemade pastries and fresh, delicious bites. Our inviting atmosphere and friendly shefs make
+          it the
+          ideal spot to relax, work, or catch up with friends. Visit us at Jenin-AbuBaker street. We are open 24/7 to
+          serve you anytime!</p>
       </div>
       <div class="info-features">
         <div class="feature">
@@ -116,14 +118,14 @@
     </div>
     <div class="right">
       <h3>Social Media</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate consectetur ex perspiciatis rerum quis
-        reiciendis saepe beatae necessitatibus eligendi eius natus, itaque aut facilis accusantium in alias iusto harum.
+      <p>Welcome to YKPO Café in the heart of Jenin. Enjoy artisanal drinks and homemade pastries in a cozy, friendly
+        atmosphere.
+        Open 24/7 at Jenin-AbuBaker Street.
       </p>
       <div class="links">
         <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
         <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
       </div>
     </div>
   </div>
