--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -87,16 +87,15 @@
         </div>
         <div class="right">
             <h3>Social Media</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate consectetur ex perspiciatis
-                rerum quis
-                reiciendis saepe beatae necessitatibus eligendi eius natus, itaque aut facilis accusantium in alias
-                iusto harum.
+            <p>Welcome to YKPO Café in the heart of Jenin. Enjoy artisanal drinks and homemade pastries in a cozy,
+                friendly
+                atmosphere.
+                Open 24/7 at Jenin-AbuBaker Street.
             </p>
             <div class="links">
                 <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
                 <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
             </div>
         </div>
     </div>
