--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -37,7 +37,7 @@
             <i class="fa-solid fa-bars" id="menu-icon"></i>
             <span class="logo"><a href="/home">YKPO Café</a></span>
             <div class="right-header">
-                <div class="user-name">hey  <span class="name"></span></div>
+                <div class="user-name">hey <span class="name"></span></div>
             </div>
         </div>
     </div>
@@ -79,14 +79,13 @@
                 </div>
 
                 <div class="part btns">
-                    <input type="button" value="delete account" class="delete-btn">
                     <input type="button" value="edit" class="edit-btn">
                     <input type="button" value="Save" class="save-btn" onclick="updateData()" />
                     <input type="button" value="cancel" class="cancel-btn">
+                    <input type="button" class="change-pass-btn" value="change password">
+                    <input type="button" value="delete account" class="delete-btn">
                 </div>
-                <div class="change-password part ">
-                    <span class="change-pass-btn">change your password</span>
-                </div>
+
             </form>
         </div>
     </div>
