--- a/css/footer-style.css
+++ b/css/footer-style.css
@@ -8,6 +8,7 @@
   --radius-deg: 30px;
   --large-home-font: 65px;
   --small-home-font: 55px;
+  --statics-font: poppins, sans-serif;
 }
 
 /* start footer section */
@@ -18,14 +19,16 @@
   justify-content: space-between;
   align-items: center;
   padding: 1% 5%;
+  font-size: 14px;
   background-color: #333;
-  color: var(--main-background-color);
+  color: #ddd !important;
+  font-family: var(--statics-font);
 }
 .footer .left {
-  color: var(--background-main-color);
+  /* color: var(--background-main-color); */
 }
 .footer .right {
-  color: var(--background-main-color);
+  /* color: var(--background-main-color); */
 }
 .footer .left .footer-loc {
   display: flex;
