--- a/css/home-style.css
+++ b/css/home-style.css
@@ -138,7 +138,7 @@ html {
 /* start about section */
 .about-section {
   margin-top: 100px;
-  padding: 5%;
+  padding: 5% 0;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -172,11 +172,14 @@ html {
 }
 .about-section .info-text h3 {
   text-transform: capitalize;
-  font-size: 45px;
+  font-size: 38px;
   font-family: var(--main-font);
   font-weight: bold;
   color: var(--font-color);
   margin-bottom: 50px;
+}
+.about-section .info-text p {
+  font-size: 18px;
 }
 
 .about-section .info-features {
