--- a/views/check-out.ejs
+++ b/views/check-out.ejs
@@ -64,7 +64,9 @@
                     <div class="product-table">
 
                     </div>
-                    <div class="dashed">-----------------------------------</div>
+                    <div class="dashed">
+                        <hr>
+                    </div>
                     <div class="total">
                         <div class="label">total </div>
                         <div class="price">
@@ -78,17 +80,19 @@
                 <form id="orderForm">
                     <div class="address">
                         <input type="text" class="name input-style" placeholder="name" required>
-                        <input type="text" class="phone input-style" placeholder="phone number" required>
+                        <input type="text" class="phone input-style" placeholder="phone number"
+                            oninput="checkPhone(event)" required>
                         <input type="text" class="city input-style" placeholder="city" required>
                         <input type="text" class="address1 input-style" placeholder="address" required>
                         <input type="text" class="address2 input-style" placeholder="address 2 (optional)">
                         <label for="" class="method-payment">payment methods :</label>
                         <div class="cod">
-                            <input type="radio" name="paymentRadio" id="cod" value="cod" class="Cash" checked >
+                            <input type="radio" name="paymentRadio" id="cod" value="cod" class="Cash" checked>
                             <label for="cod" class="cod-label">Cash on Delivery</label>
                         </div>
                         <div class="coins">
-                            <input type="radio" name="paymentRadio" id="coinsR" value="coins" class="Score" onclick="checkRadio()">
+                            <input type="radio" name="paymentRadio" id="coinsR" value="coins" class="Score"
+                                onclick="checkRadio()">
                             <label for="coins" class="cod-label" id="coinsLabel">Score</label>
                             <label for="coins" class="cod-label" id="coinsLabel-notEnough"
                                 onclick="checkRadio()"><del>Score</del></label>
