--- a/views/admin/messages.ejs
+++ b/views/admin/messages.ejs
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet" />
     <link rel="icon" href="/images/home.ico" />
-    <title>Admin Messages</title>
+    <title>Admin Reservations</title>
 </head>
 
 <body>
@@ -50,7 +50,7 @@
                 <li class="dashboard"><a href="dashboard"><i class="fa-solid fa-house"></i> dashboard</a></li>
                 <li class="customers"><a href="users"><i class="fa-regular fa-user"></i> users</a></li>
                 <li class="orders"><a href="orders"><i class="fa-solid fa-scroll"></i> orders</a></li>
-                <li class="messages"><a href="messages"><i class="fa-regular fa-envelope"></i> messages</a></li>
+                <li class="messages"><a href="messages"><i class="fa-regular fa-envelope"></i> Reservations</a></li>
                 <li class="products"><a href="products"><i class="fa-solid fa-utensils"></i> products</a></li>
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
 
@@ -59,7 +59,7 @@
         </div>
         <div class="content">
             <h1 class="messages-title">
-                messages
+                Reservations
             </h1>
             <div class="messages-table">
 
