update checkout page

--- a/views/check-out.ejs
+++ b/views/check-out.ejs
@@ -93,8 +93,8 @@
                         <div class="coins">
                             <input type="radio" name="paymentRadio" id="coinsR" value="coins" class="Score"
                                 onclick="checkRadio()">
-                            <label for="coins" class="cod-label" id="coinsLabel">Score</label>
-                            <label for="coins" class="cod-label" id="coinsLabel-notEnough"
+                            <label for="coinsR" class="cod-label" id="coinsLabel">Score</label>
+                            <label for="coinsR" class="cod-label" id="coinsLabel-notEnough"
                                 onclick="checkRadio()"><del>Score</del></label>
                         </div>
                         <div class="submit-btn">
