Edit Style admin and user profile

--- a/css/admin-profile.css
+++ b/css/admin-profile.css
@@ -173,7 +173,7 @@ body {
 }
 .profile-container .aside li a {
   color: var(--aside-links-color);
-}
+}ٍ
 .profile-container .aside .logout {
   padding: 30px;
   background-color: transparent;
