--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -78,7 +78,7 @@
                     <input type="password" class="new-password" name="new-password">
                 </div>
 
-                <div class="part btns">
+                <div class="part btns" style="display:flex; flex-direction: column; flex-wrap: nowrap; margin-top: 2rem;">
                     <input type="button" value="edit" class="edit-btn">
                     <input type="button" value="Save" class="save-btn" onclick="updateData()" />
                     <input type="button" value="cancel" class="cancel-btn">
