--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -43,7 +43,8 @@
                 </ul>
             </div>
             <div class="right-header">
-                <a href="#" class="cart-icon"> <i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="#" class="cart-icon"><span class="cart-counter">0</span> <i
+                        class="fa-solid fa-cart-shopping"></i></a>
                 <a href="login" class="login-icon" onclick="redirect()" id="loginIc">
                     <i class="fa-regular fa-circle-user login-icon"></i>
                 </a>
