update menu page

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -86,7 +86,7 @@
     </div>
     <!-- start cart tag -->
     <div class="cart-tap">
-        <h1 class="cart-header">Shopping Cart</h1>
+        <h1 class="cart-header"> Cart</h1>
         <div class="list-cart">
 
         </div>
