--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -61,6 +61,7 @@
                 Orders
             </h1>
             <div class="orders-table">
+                <p class="no-items">There are currently no orders</p>
             </div>
         </div>
     </div>
