--- a/css/admin-orders.css
+++ b/css/admin-orders.css
@@ -330,6 +330,7 @@ body {
 .orders-table .no-items{
   font-size: 16px;
     color: var(--aside-links-color);
+    display: none;
 }
 
 .message .info-container{
