--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -52,6 +52,7 @@
                 <li class="messages"><a href="messages"><i class="fa-regular fa-envelope"></i> Reservations</a></li>
                 <li class="products"><a href="products"><i class="fa-solid fa-utensils"></i> products</a></li>
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
+                <li class="backToHome"><a href="/home"><i class="fa-solid fa-left-long"></i>Back to Home</a></li>
             </ul>
             <button class="logout" onclick="logout()">logout <i
                     class="fa-solid fa-arrow-right-from-bracket"></i></button>
@@ -81,7 +82,7 @@
                     <input type="password" class="new-password" name="new-password">
                 </div>
 
-                <div class="part btns" style="display:flex; flex-direction: column; flex-wrap: nowrap; margin-top: 2rem;">
+                <div class="part btns">
                     <input type="button" value="edit" class="edit-btn">
                     <input type="button" value="Save" class="save-btn" onclick="updateData()" />
                     <input type="button" value="cancel" class="cancel-btn">
