--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -51,6 +51,7 @@
                 <li class="orders"><a href="orders"><i class="fa-solid fa-scroll"></i> orders</a></li>
                 <li class="messages"><a href="messages"><i class="fa-regular fa-envelope"></i> Reservation</a></li>
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
+                <li class="backToHome"><a href="/home"><i class="fa-solid fa-left-long"></i>Back to Home</a></li>
             </ul>
             <button class="logout" onclick="logout()">logout <i
                     class="fa-solid fa-arrow-right-from-bracket"></i></button>
@@ -66,7 +67,7 @@
                         <p onclick="showMsgs(event)">recent orders</p>
                     </div>
                     <div class="content-section">
-
+                        <p class="no-items">There are currently no orders</p>
                     </div>
                 </div>
                 <div class="history-orders orders-section">
@@ -75,7 +76,7 @@
                         <p onclick="showMsgs(event)">orders history</p>
                     </div>
                     <div class="content-section">
-
+                        <p class="no-items">There are currently no orders</p>
                     </div>
                 </div>
             </div>
