--- a/css/user-resrvation.css
+++ b/css/user-resrvation.css
@@ -327,7 +327,11 @@ body {
   background-color: var(--color-background);
   padding: 20px;
 }
-
+ .no-items{
+  font-size: 16px;
+    color: var(--aside-links-color);
+    display: none;
+}
 .message .info-container{
     width: 80%;
 }
