--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -53,6 +53,7 @@
                 <li class="messages"><a href="messages"><i class="fa-regular fa-envelope"></i> Reservations</a></li>
                 <li class="products"><a href="products"><i class="fa-solid fa-utensils"></i> products</a></li>
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
+                <li class="backToHome"><a href="/home"><i class="fa-solid fa-left-long"></i>Back to Home</a></li>
             </ul>
             <button class="logout">logout <i class="fa-solid fa-arrow-right-from-bracket"></i></button>
         </div>
@@ -65,7 +66,6 @@
             </div>
         </div>
     </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-orders.js"></script>
