--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -52,6 +52,7 @@
                 <li class="messages"><a href="messages"><i class="fa-regular fa-envelope"></i> Reservations</a></li>
                 <li class="products"><a href="products"><i class="fa-solid fa-utensils"></i> products</a></li>
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
+                <li class="profile"><a href="/home"><i class="fa-solid fa-left-long"></i>Back to Home</a></li>
 
             </ul>
             <button class="logout">logout <i class="fa-solid fa-arrow-right-from-bracket"></i></button>
@@ -153,7 +154,7 @@
                 <input type="button" value="Edit" class="edit-btn btn-style" onclick="eidtProductBtnFunction(event)">
                 <input type="button" value="Done" class="done-btn btn-style" onclick="closeMoreDetailsPage()">
                 <input type="button" value="Save" class="save-btn btn-style" onclick="updateProduct(event)" />
-                <input type="button" value="cancel" class="cancel-btn btn-style" onclick="cancelBtnFunction(event)">
+                <li class="backToHome"><a href="/home"><i class="fa-solid fa-left-long"></i>Back to Home</a></li>
             </div>
         </form>
     </div>
