--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -51,6 +51,7 @@
                 <li class="orders"><a href="orders"><i class="fa-solid fa-scroll"></i> orders</a></li>
                 <li class="messages"><a href="messages"><i class="fa-regular fa-envelope"></i> Reservation</a></li>
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
+                <li class="backToHome"><a href="/home"><i class="fa-solid fa-left-long"></i>Back to Home</a></li>
 
             </ul>
             <button class="logout">logout <i class="fa-solid fa-arrow-right-from-bracket"></i></button>
