--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -48,6 +48,7 @@
                 <li class="orders"><a href="orders"><i class="fa-solid fa-scroll"></i> orders</a></li>
                 <li class="messages"><a href="messages"><i class="fa-regular fa-envelope"></i> Reservation</a></li>
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
+                <li class="backToHome"><a href="/home"><i class="fa-solid fa-left-long"></i>Back to Home</a></li>
 
             </ul>
             <button class="logout" onclick="logout()">logout <i
@@ -78,7 +79,7 @@
                     <input type="password" class="new-password" name="new-password">
                 </div>
 
-                <div class="part btns" style="display:flex; flex-direction: column; flex-wrap: nowrap; margin-top: 2rem;">
+                <div class="part btns">
                     <input type="button" value="edit" class="edit-btn">
                     <input type="button" value="Save" class="save-btn" onclick="updateData()" />
                     <input type="button" value="cancel" class="cancel-btn">
